<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="show_previous_chat">Chats</string>
    <string name="goto_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="app_name">FlatMate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="tap_on_mic">Click to input</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="input_text">Ask Ixion</string>
    <string name="send">Send</string>
    <string name="press_to_speak_input">Button to speak your question</string>
    <string name="action_logout">Logout</string>
    <string name="action_clear_chat">Clear session</string>
    <string name="search_property">Search</string>
    <string name="login_or_signup">SIGN IN</string>
    <string name="or">OR</string>
    <string name="empty_view">Strike a conversation!</string>
    <string name="title_activity_maps">Map</string>
    <string name="logging_in">Logging in</string>
    <string name="registering_user">Registering</string>

    <!--Nav drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>

    <string name="owner_name">Owner name: </string>
    <string name="address">Address: </string>
    <string name="number_of_rooms">Number of Rooms: </string>
    <string name="rent">Rent: </string>
    <string name="mobile">Contact no.: </string>
    <string name="email_id">Email id: </string>
    <string name="list_your_property">List your property</string>
    <string name="create_contract">Create Contract</string>
    <string name="decentralised_search">Go Decentralised</string>
    <string name="upload_to_decentral_network">Upload to Decentral market?</string>

    <!--Added by Daman-->
    <string name="vendor_name">Vendor Name: </string>
    <string name="price">Price: </string>
    <string name="contract_id">Contract ID: </string>
    <string name="vendor_location">Vendor Location: </string>
    <string name="searching">Searching</string>
    <string name="please_wait">Please wait</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="get_more_info">View more information</string>
    <string name="property_contract">Contract</string>
    <string name="pay">Buy</string>
    <string name="transfer_money">Transfer money to buy</string>
    <string name="enter_bhk_and_city">Enter BHK and city</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>

    <string name="credits">Gurpreet Singh (01813202713)\nManpreet Singh (01913202713)\nHarpreet Singh (05713202713)\nDamanpreet Singh (05813202713)</string>
    <string name="privacy">Flatmate initially helps users to search their house according to their requiremnets with a hassle-free user interface. All the data is scraped from different house listing websites.\nUsers can list house by filling some information. All the information is secured.\nUsers can list house in blockchain and create a contract as a proof of statement.\n\nFlatmate is an open source project.</string>
    <string name="node_address">Node Address</string>
    <string name="node_password">Password</string>
    <string name="node_settings">Update Node Specs</string>

</resources>
