<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/show_previous_chat" />
        <item
            android:id="@+id/nav_push_data"
            android:icon="@drawable/ic_home"
            android:title="@string/list_your_property" />
        <item
            android:id="@+id/nav_decentralised_search"
            android:icon="@drawable/ic_decentralised"
            android:title="@string/decentralised_search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/goto_settings" />
        <item
            android:id="@+id/nav_node_details"
            android:icon="@drawable/ic_settings_node"
            android:title="@string/node_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_feed_back"
                android:title="@string/feedback" />
            <item
                android:id="@+id/action_logout"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>