<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.flatmates.ixion.activity.helper.FeedBackActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editText_fb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editText_fb_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:met_floatingLabel="normal" />

    <Button
        android:id="@+id/button_fb_submit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:paddingLeft="@dimen/margin_32dp"
        android:paddingStart="@dimen/margin_32dp"
        android:paddingEnd="@dimen/margin_32dp"
        android:paddingRight="@dimen/margin_32dp"
        android:textColor="@android:color/white" />

</LinearLayout>
