<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.flatmates.ixion.activity.chat.ChatActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/message_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/button_show_results"
            style="?buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/search_property"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageButton
                android:id="@+id/imagebutton_speak"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:background="@null"
                android:contentDescription="@string/press_to_speak_input"
                android:scaleType="fitXY"
                android:src="@drawable/ic_keyboard_voice_black_24dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_user_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/input_text"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/ic_send_black_24dp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
